# SkottieWrapper

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: SkottieWrapper.h
src/: CMakeLists.txt  SkottieWrapper.cpp  SkottieWrapper.rc
